# Password_Protection

./: README.md
backend/: index.ts  package.json
firmware/: CMakeLists.txt  flash_vault.hpp  main.cpp
firmware/lib/: monocypher.c
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  index.tsx
